@@ -1,3 +1,11 @@
+2016-10-29	"A list is only as strong as its weakest link."  (3)
+
+		include/innocent-pear/omg.h :
+		- x86-64:  now uses a different way to overcome the "red zone"
+
+		include/innocent-pear/unpossible.h :
+		- now also produces (spurious) indirect routine calls
+
 2016-10-28	"A list is only as strong as its weakest link."  (2)
 
 		include/innocent-pear/omg.h :
